--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VIM",
+  "name": "VIM-test",
   "version": "0.1.0",
   "homepage": "https://colinhartigan.github.io/VIM-test-client",
   "private": false,
