--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "VIM-test",
+  "name": "VIM",
   "version": "0.1.0",
-  "homepage": "https://colinhartigan.github.io/VIM-test-client",
+  "homepage": "https://colinhartigan.github.io/valorant-inventory-manager",
   "private": false,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@use-it/event-listener": "^0.1.7",
     "clsx": "^1.1.1",
     "fuse.js": "^6.5.3",
     "fuzzysort": "^1.1.4",
