--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{
+wba{
   "name": "VIM",
   "version": "0.1.0",
-  "homepage": "https://colinhartigan.github.io/valorant-inventory-manager",
+  "homepage": "https://colinhartigan.github.io/VIM-test-client",
   "private": false,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
